# task

./: .gitignore  .gitmodules  ESP-IDF.txt  README.md  github.txt  key.c  key.h  key.txt  main.c
imolaza_device_pro/: CMakeLists.txt  Doxyfile  README.md  debug_log.txt  esp_ota_ops.c  node.txt  online.txt  tx.txt  utou1.txt
imolaza_device_pro/core/: README.md  core.c  core.h  fset_lib.h  text.h
imolaza_device_pro/core/application/: README.md
imolaza_device_pro/core/application/compatible_old/: compatible_old.c
imolaza_device_pro/core/application/device_proper/: device_attribute.c  device_attribute.h  device_attribute_change_event.c  device_fsm.h
imolaza_device_pro/core/application/instance_manage/: instance.h
imolaza_device_pro/core/application/light/: display_light_model.c  display_manage.c  display_manage.h
imolaza_device_pro/core/application/manual/: manual.h  manual_manage.c  manual_run.c
imolaza_device_pro/core/application/monitor/: monitor.c  monitor.h
imolaza_device_pro/core/application/network/: network.c  network.h  network_config.h  network_connect_manage.h  ota.h
imolaza_device_pro/core/application/ota/: ota_application.c  ota_application.h
imolaza_device_pro/core/application/sun_info/: sun_info.c
imolaza_device_pro/core/application/sync/: app_sync.c
imolaza_device_pro/core/drive/chip_drive/: pump.h  solenoid.h
imolaza_device_pro/core/drive/soft_drive/: bluetool.h  wifi.h
imolaza_device_pro/core/middle/Early_warning/: early_warning.c  early_warning.h
imolaza_device_pro/core/middle/FSM/: fsm.h
imolaza_device_pro/core/middle/channel/: channel_manage.h
imolaza_device_pro/core/middle/device/: d.c  (+3 more)
imolaza_device_pro/drive/: drive.h
imolaza_device_pro/drive/ADC/: m_adc.c  m_adc.h
imolaza_device_pro/drive/MDA_ADC/: mda_adc.c  mda_adc.h
imolaza_device_pro/drive/bluetool/: bluetool_ft.c  bluetool_ft.h
imolaza_device_pro/drive/button/: button_ft.c
imolaza_device_pro/drive/chip_out/: chip_out.h
imolaza_device_pro/drive/flash/: flash.c  flash_ft.c
imolaza_device_pro/drive/gpio/: gpio.c
imolaza_device_pro/drive/iic/: m_iic.c  m_iic.h
imolaza_device_pro/drive/light/: lighting.c  lighting.h
imolaza_device_pro/drive/ota_drive/: ota_m.c  ota_m.h  ota_m_new.c
imolaza_device_pro/drive/rtc/: mrtc_driver.c  mrtc_driver.h
imolaza_device_pro/drive/sensor/: sensor.c
imolaza_device_pro/drive/server_connect/: lwip_ft.c  mqtt_ft.c  tcp_ft.c  tcp_mbedtls.c  tcp_wolfssl_ft.c  tls_ft.c
imolaza_device_pro/drive/timer/: timer_ft.c
imolaza_device_pro/drive/wdt/: wdt.c
imolaza_device_pro/drive/wifi/: wifi_ft.c
imolaza_device_pro/main/: CMakeLists.txt  ca.crt  client.crt  client.key
imolaza_device_pro/main/application/: include.h
imolaza_device_pro/main/application/monitor/: monitor.c
imolaza_device_pro/main/application/network/: http_requ.c  mdns_ft.c  network.c  network_handle.c
imolaza_device_pro/main/application/user_main/: app_main.c  app_main.h  hardware.c  init.c
imolaza_device_pro/main/cert/: ca.crt  client.crt  client.key
imolaza_device_pro/main/core/: config.h  core.c
imolaza_device_pro/main/event/: event_ft.c  manual_event.c  sensor_event.c
imolaza_device_pro/temp_buf/network/: mnetwork.h  mnetwork_connect.c  mnetwork_transform.c  mnetwork_transmission.c
imolaza_device_pro/temp_buf/schedule/: CMakeLists.txt  Makefile  TestEncry.c  TestOut.h  cmake_install.cmake  flash_stroahr.h  main.c  main.h
imolaza_device_pro/temp_buf/schedule/core/: 0core.c
imolaza_device_pro/temp_buf/schedule/core/fsm/: mfsm.c
imolaza_device_pro/temp_buf/schedule/core/notify/: event_notice.c  m_event_transit.c  msg_handle.c  notify.h  schedule_execution_notice.c
imolaza_device_pro/temp_buf/schedule/core/schedule/: mschedule.c  mschedule.h  mschedule_list.c  mschedule_run.c  mschedule_storage.c  schedule_hang_up.c  schedule_instance.c  schedule_recover.c
imolaza_device_pro/temp_buf/schedule/core/schedule/new_lwan/: new_lwan.c  new_lwan_mode.h  new_lwan_time_list.c
imolaza_device_pro/temp_buf/schedule/core/schedule/option/: global_skip.c  m_global_zone.c  m_smart_config.c  operation.c  option.c  option.h
imolaza_device_pro/temp_buf/schedule/core/utils/: squeue.c  util.h
imolaza_device_pro/temp_buf/utils/: backstage.c  fun_test.c  global_net_adapter.c  insi_format.c  mdata_format.c  mjson.c  mmdns.c  state_core.c  text.h  util.h
imolaza_device_pro/unit_test/: README.md  global_net_adapter.c
imolaza_device_pro/unit_test/application/user_main/: CMakeLists.txt  init.c  main.c  main.h
imolaza_device_pro/unit_test/network/: CMakeLists.txt  main.c
(+160 files in other folders)
